--- a/config.json
+++ b/config.json
@@ -12,7 +12,7 @@
 			"settings": {
 				"clients": [
 					{
-						"id": "UUID",
+						"id": "306f92a7-1392-4b91-b79e-db1ffd2e7942",
 						"alterId": 0
 					}
 				]
@@ -31,7 +31,7 @@
 			"settings": {
 				"clients": [
 					{
-						"id": "UUID"
+						"id": "306f92a7-1392-4b91-b79e-db1ffd2e7942"
 					}
 				],
 				"decryption": "none"
@@ -50,7 +50,7 @@
 			"settings": {
 				"clients": [
 					{
-						"password": "UUID"
+						"password": "306f92a7-1392-4b91-b79e-db1ffd2e7942"
 					}
 				],
 				"decryption": "none"
@@ -70,7 +70,7 @@
 				"clients": [
 					{
 						"method": "chacha20-ietf-poly1305",
-						"password": "UUID"
+						"password": "306f92a7-1392-4b91-b79e-db1ffd2e7942"
 					}
 				],
 				"decryption": "none"
